--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Sibaprasad Maiti <sibu.it13@gmail.com>",
   "license": "ISC",
+  "repository": "https://github.com/sibu-github/deep-parse-json",
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.4"
