--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deep-parse-json",
-  "version": "1.0.0",
-  "description": "Recursively parses stringified json string until the whole string normalizes",
+  "version": "1.0.1",
+  "description": "Recursively parses stringified json string",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
@@ -12,5 +12,5 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.0.4"
-  }
+  }	
 }
