--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "deep-parse-json",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Recursively parses a stringified json and returns javascript object",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "mocha"
+    "build": "tsc",
+    "test:watch": "jest --watch",
+    "test": "jest --coverage"
   },
   "author": "Sibaprasad Maiti <sibu.it13@gmail.com>",
   "license": "ISC",
   "repository": "https://github.com/sibu-github/deep-parse-json",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.0.4"
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
